<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pacheck_background_final"
    android:padding="20dp"
    tools:context=".MainActivity">


    <!-- Calculate Button-->

    <!-- Reset Button-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPACheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/price_amount_check"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="98dp"
                    android:layout_height="99dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/logo_on_top"
                    android:textAlignment="center"
                    app:srcCompat="@drawable/mf_pachecker" />

                <TextView
                    android:id="@+id/txtProduct1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/product_1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblPrice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price1"

                    android:textColor="#FFFFFF" />

                <EditText
                    android:id="@+id/tfPrice1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="Like Euro, Dollar, Pounds, etc."
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/lblAmount1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount1"
                    android:textColor="#FFFFFF" />

                <EditText
                    android:id="@+id/tfAmount1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="Like (kilo)gram, liter, weight. etc."
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/txtProduct2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/product_2"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblPrice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price2"
                    android:textColor="#FFFFFF" />

                <EditText
                    android:id="@+id/tfPrice2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="Like Euro, Dollar, Pounds, etc."
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/lblAmount2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount2"
                    android:textColor="#FFFFFF" />

                <EditText
                    android:id="@+id/tfAmount2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="Like (kilo)gram, liter, weight, etc."
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:shadowColor="#000000"
                    android:text="@string/how_much_are_you_saving_today"
                    android:textAlignment="center"
                    android:textColor="#4CAF50"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/lblSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="60dp"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnCalc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate"
                    android:textColor="@color/white"
                    app:backgroundTint="#4CAF50" />

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:textColor="@color/white"
                    app:backgroundTint="#FF5722" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>